--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: BatCodeDev
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web de desarrolladores de BatCode.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/43436724?s=400&u=81c14b8e8eeffe2e295d90f35c892da792a33f3a&v=4
 
 #
 # Flags below are optional
